welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: ';' expected but 'for' found.
} for ( p <- 0 to (hauteur - 1) ) {
  ^